--- a/lista4.ipynb
+++ b/lista4.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/BgXbjlqhGhBKnxPsJNUR",
+      "authorship_tag": "ABX9TyMjJguCSVKwdx8hXdVkW5eu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ledyann/Lediane-PE/blob/master/lista4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JZQdP8PNQbV6"
+      },
+      "source": [
+        "Disciplina: Probabilidade e Estatística\n",
+        "\n",
+        "Aluno: Lediane Silva\n",
+        "\n",
+        "Matrícula: 2014290050\n",
+        "\n",
+        "Lista 4\n"
       ]
     },
     {
