--- a/lista4.ipynb
+++ b/lista4.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMjJguCSVKwdx8hXdVkW5eu",
+      "authorship_tag": "ABX9TyMVjG2S2P1Vi+cFyQkLrAGe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "id": "ThNUrXvLnMYa"
       },
       "source": [
-        "1. Escreva um programa para ler o número de lados de um polígono regular e a\n",
+        "Escreva um programa para ler o número de lados de um polígono regular e a\n",
         "medida do lado (em cm). Calcular e imprimir o seguinte: − Se o número de lados\n",
         "for igual a 3 escrever TRIÂNGULO e o valor da área − Se o número de lados for\n",
         "igual a 4 escrever QUADRADO e o valor da sua área. − Se o número de lados for\n",
@@ -90,7 +90,7 @@
         "id": "kYT16p0ZtNca"
       },
       "source": [
-        "2. Acrescente as seguintes mensagens à solução do exercício anterior conforme o\n",
+        "Acrescente as seguintes mensagens à solução do exercício anterior conforme o\n",
         "caso. − Caso o número de lados seja inferior a 3 escrever NÃO É UM\n",
         "POLÍGONO. − Caso o número de lados seja superior a 5 escrever POLÍGONO\n",
         "NÃO IDENTIFICADO."
@@ -138,7 +138,7 @@
         "id": "51G0FVajvToM"
       },
       "source": [
-        "3. Escreva um programa para ler 3 valores inteiros e escrever o maior deles.\n",
+        "Escreva um programa para ler 3 valores inteiros e escrever o maior deles.\n",
         "Considere que o usuário não informará valores iguais.\n"
       ]
     },
@@ -176,7 +176,7 @@
         "id": "DyjQ2Nh60SXf"
       },
       "source": [
-        "4. Escreva um programa que leia as medidas dos lados de um triângulo e escreva\n",
+        "Escreva um programa que leia as medidas dos lados de um triângulo e escreva\n",
         "se ele é Equilátero, Isósceles ou Escaleno. Sendo que: − Triângulo Equilátero:\n",
         "possui os 3 lados iguais. − Triângulo Isóscele: possui 2 lados iguais. − Triângulo\n",
         "Escaleno: possui 3 lados diferentes"
@@ -214,7 +214,7 @@
         "id": "qjIhVyvv2bd6"
       },
       "source": [
-        "5. Escreva um programa que leia o valor de 3 ângulos de um triângulo e escreva se\n",
+        "Escreva um programa que leia o valor de 3 ângulos de um triângulo e escreva se\n",
         "o triângulo é Acutângulo, Retângulo ou Obtusângulo. Sendo que: − Triângulo\n",
         "Retângulo: possui um ângulo reto. (igual a 90º) − Triângulo Obtusângulo: possui\n",
         "um ângulo obtuso. (maior que90º) − Triângulo Acutângulo: possui três ângulos\n",
@@ -257,7 +257,7 @@
         "id": "N3I96WU94XRO"
       },
       "source": [
-        "6. Faça um programa para ler um número inteiro e imprimir todos os números de 0\n",
+        "Faça um programa para ler um número inteiro e imprimir todos os números de 0\n",
         "até o número lido"
       ]
     },
@@ -283,7 +283,7 @@
         "id": "48htlCAJ9u2e"
       },
       "source": [
-        "7. Solicitar um número entre 1 e 4. Se a pessoas digitar um número diferente,\n",
+        "Solicitar um número entre 1 e 4. Se a pessoas digitar um número diferente,\n",
         "mostrar a mensagem \"entrada inválida\" e solicitar o número novamente. Se\n",
         "digitar correto mostrar o número digitado"
       ]
@@ -312,7 +312,7 @@
         "id": "ig-U8KksB3ck"
       },
       "source": [
-        "8. Fazer um programa que receba vários valores inteiros no teclado (um valor a\n",
+        "Fazer um programa que receba vários valores inteiros no teclado (um valor a\n",
         "cada iteração) e determine o maior dos colocados desde o inicio do programa. A\n",
         "condição de término do programa é quando o usuário digitar zero."
       ]
@@ -350,7 +350,7 @@
         "id": "YGK0vqQcCqqD"
       },
       "source": [
-        "9. Escreva um programa Python que leia um número inteiro positivo de 4 dígitos,\n",
+        "Escreva um programa Python que leia um número inteiro positivo de 4 dígitos,\n",
         "calcule e mostre a sua decomposição em unidade, dezena, centena e milhar:\n",
         "Exemplo: 8531; unidade = 1 dezena = 3 centena = 5 5 milhar = 8"
       ]
